# mkdocs-piper-tts

./: .gitignore  404.html  CNAME  LICENSE  MANIFEST.in  README.md  index.html  pylintrc  pyproject.toml  review.md  sitemap.xml
.github/workflows/: deploy-example-pages.yml  publish-pypi.yml
e2e-status/: index.html
examples/simple-site/: mkdocs.yml
examples/simple-site/docs/: e2e-status.md  index.md
examples/simple-site/models/: README.md
examples/simple-site/overrides/: main.html
scripts/: build_example_pages.py  example_voice_asset.py  release_package.py
search/: search_index.json
src/mkdocs_piper_tts/: plugin.py
tests/: test_example_e2e.py  test_plugin_unit.py  test_text_extraction.py
