[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-piper-tts"
version = "0.2.3"
description = "MkDocs plugin for generating and serving Piper text-to-speech page audio"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Reto Weber" }]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: MkDocs",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "markupsafe>=2.1",
  "mkdocs>=1.6,<2",
  "piper-tts==1.2.0",
]

[project.optional-dependencies]
cuda = [
  "onnxruntime-gpu[cuda,cudnn]==1.25.0",
]
test = ["pytest>=8,<9"]

dev = [
    "mypy>=1.11,<2.0",
    "pyink>=24.8,<25.0",
    "pylint>=3.2,<4.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[tool.pyink]
line-length = 128
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = "src tests"
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true
namespace_packages = true
plugins = []

[project.entry-points."mkdocs.plugins"]
piper-tts = "mkdocs_piper_tts.plugin:PiperTTSPlugin"

[project.urls]
Homepage = "https://github.com/risajef/mkdocs-piper-tts"
Repository = "https://github.com/risajef/mkdocs-piper-tts"
Issues = "https://github.com/risajef/mkdocs-piper-tts/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["cuda: requires CUDAExecutionProvider and a compatible GPU"]

[tool.uv]
dependency-metadata = [
  { name = "piper-tts", version = "1.2.0", requires-dist = [
    "piper-phonemize~=1.1.0",
    "onnxruntime-gpu[cuda,cudnn]==1.25.0",
  ] },
]
